# hyprpaper-mac

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CNAME  Makefile  README.md  icon.icns  index.html  index.jsx  main.js  package-lock.json  package.json  preload.js  script.js  styles.css  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: script.js
public/: index.html  script.js  styles.css
src/: App.css  App.jsx  Settings.jsx  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/themes/: aura.json  ayu-dark.json  cobalt2.json  dracula.json  gruvbox-dark.json  material-theme.json  monokai.json  night-owl.json  nord.json  one-dark-pro.json  panda-syntax.json  solarized-dark.json  synthwave.json  tokyo-night-blue.json
